--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,7 +115,8 @@ services:
   postgres:
     restart: always
     # Use the postgres alpine image: https://hub.docker.com/_/postgres/
-    image: postgres:alpine
+    # We MUST use version 13 or otherwise we will face this: https://stackoverflow.com/questions/62807717/how-can-i-solve-postgresql-scram-authentifcation-problem
+    image: postgres:13-alpine
 
     # Mount an initialization script and the persistent postgresql data volume
     volumes:
@@ -138,7 +139,8 @@ services:
   security_postgres:
     restart: always
     # Use the postgres alpine image: https://hub.docker.com/_/postgres/
-    image: postgres:alpine
+    # We MUST use version 13 or otherwise we will face this: https://stackoverflow.com/questions/62807717/how-can-i-solve-postgresql-scram-authentifcation-problem
+    image: postgres:13-alpine
 
     # Mount an initialization script and the persistent postgresql data volume
     volumes:
