Add local security for services (#10)
* Adding initial code.

* Removing comments.

* Using specific Postgres version to avoid issues with interaction between app and database.

* Added new methods and database tables.

* Add cinema and bookings services.

* Renamed data base entities to singular.

* Add basic payment service.

* Notification service first implementation.

* Notify payment code.

* Integrating authentication into services and first implementation of reports service.

* Adding employee role to security service.

* Adding local security to services.

* Fix issues with authentication.

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DBUSER=auth_user
 DBPASSWORD=mypassword
 AUTHSECRET=qwerty
 EXPIRESSECONDS=3000 
+#SECURITYMODE=Decentralized
+SECURITYMODE=Centralized
