--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 DBNAME=authdb_dev
 DBUSER=auth_user
-DBPASSWORD=mypassword
-AUTHSECRET=qwerty
+DBPASSWORD=Eh8Q1*IGOpGK!Qd*9SB5T8DnmIxjo&@1B4nxIbT15ePLSNHViy
+AUTHSECRET=RhTT833Hj*1%Pxh$WE027uRj46sOgtPqT94Yi55nJj2Gi5Tcbn
 EXPIRESSECONDS=3000 
 SECURITYMODE=Decentralized
 #SECURITYMODE=Centralized
 TELEMETRY=On
 #TELEMETRY=Off
+#SENDEMAIL=On
+SENDEMAIL=Off
