Changes to parsing script.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DBNAME=authdb_dev
 DBUSER=auth_user
 DBPASSWORD=Eh8Q1*IGOpGK!Qd*9SB5T8DnmIxjo&@1B4nxIbT15ePLSNHViy
 AUTHSECRET=RhTT833Hj*1%Pxh$WE027uRj46sOgtPqT94Yi55nJj2Gi5Tcbn
-EXPIRESSECONDS=300000000 
+EXPIRESSECONDS=30000
 #SECURITYMODE=Decentralized
 SECURITYMODE=Centralized
 TELEMETRY=On
